objects/EUR_CRM_Contract_Cocktail__c.object
<CustomObject>
    <description>Junction object between contract line item and cocktail 

For the following affiliate/s:
1. GB</description>
    <fields>
        <fullName>EUR_CRM_Cocktail_Menu__c</fullName>
        <label>Cocktail Menu</label>
        <referenceTo>EUR_CRM_Cocktail_Menu__c</referenceTo>
        <relationshipLabel>Contract Cocktails</relationshipLabel>
        <relationshipName>Contract_Cocktails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Line_Item__c</fullName>
        <label>Contract Line Item</label>
        <referenceTo>EUR_CRM_Contract_Line_Item__c</referenceTo>
        <relationshipLabel>Contract Cocktails</relationshipLabel>
        <relationshipName>Contract_Cocktails</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract__c</fullName>
        <formula>EUR_CRM_Contract_Line_Item__r.EUR_CRM_Contract__r.Id</formula>
        <label>Contract</label>
        <type>Text</type>
    </fields>
    <label>Contract Cocktail (EU)</label>
    <nameField>
        <displayFormat>CC-{0000000000}</displayFormat>
        <label>Contract Cocktail Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Cocktails (EU)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>